--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "firebase": "^8.1.1",
+    "firebase-tools": "^8.17.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
