--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "stripe": "^8.127.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
